fix(lang): Fix SearchThread translation and herald_search completion message
###  Fixes Applied

**1. SearchThread Lang Object (UI/dialogs.py)**
- Modified SearchThread.__init__() to accept lang parameter
- Pass self.lang from HeraldSearchDialog to SearchThread
- Use lang.get() in thread instead of creating new LanguageManager instance
- Ensures search_complete message uses correct language

**2. Herald Search Dialog Full Translation (UI/dialogs.py)**
- Translated all 48 UI elements in HeraldSearchDialog
- Window title, labels, buttons, tooltips, status messages
- All validation dialogs (name required, name too short, confirmations)
- Results table column headers
- Context menu items

**3. Progress Dialog Read Error Fix (UI/dialogs.py)**
- Added json_path existence check before opening file
- Prevents 'FileNotFoundError' when json_path is empty or invalid
- Better error handling in on_search_finished()

**4. Documentation Update (LANGUAGE_V2_TECHNICAL_DOC.md)**
- Added complete herald_search section (48 keys documented)
- Documented SearchThread lang parameter pattern
- Example code for proper lang usage in threads

**5. Progress Steps Key Structure (UI/progress_dialog_base.py)**
- Fixed ALL 37 ProgressStep keys from 'progress_steps.*' to 'progress.steps.*'
- Corrected 9 StepConfiguration blocks
- Now matches JSON structure properly

**6. Minor JSON Fixes**
- Fixed 'herald_import_complete' -> 'herald_import_complete_title' in all 3 languages
- Added missing progress.steps keys for character_update_simple_* and wealth_*

###  Statistics

**Files Modified:** 9 files
- UI/dialogs.py (Herald Search translation + SearchThread fix)
- UI/progress_dialog_base.py (37 progress steps keys corrected)
- Language/fr.json (+48 herald_search keys)
- Language/en.json (+48 herald_search keys)
- Language/de.json (+48 herald_search keys)
- Functions/language_schema.py (3 button mappings added)
- Functions/eden_scraper.py (1 unused import removed)
- Documentations/Lang/LANGUAGE_V2_TECHN

--- a/Language/de.json
+++ b/Language/de.json
@@ -239,7 +239,7 @@
             "migration_already_done": "Die Migration wurde bereits durchgeführt",
             "migration_not_needed": "Keine Migration erforderlich",
             "migration_no_characters": "Keine Charaktere zu migrieren",
-            "herald_import_complete": "Import abgeschlossen",
+            "herald_import_complete_title": "Import abgeschlossen",
             "herald_import_success": "✅ {count} Charakter(e) erfolgreich importiert!",
             "herald_import_updated": "🔄 {count} Charakter(e) aktualisiert!",
             "herald_import_errors": "⚠️ {count} Fehler:",
@@ -525,7 +525,15 @@
             "cookie_gen_extract": "Extrahieren der Cookies",
             "cookie_gen_save": "Speichern der Cookies",
             "cookie_gen_validate": "Validierung und Überprüfung",
-            "cleanup": "Browser wird geschlossen"
+            "cleanup": "Browser wird geschlossen",
+            "character_update_simple_scraping": "Scraping der Charakterseite",
+            "character_update_simple_comparison": "Datenvergleich",
+            "character_update_simple_apply": "Änderungen anwenden",
+            "wealth_search_characters": "Suche nach Charakteren nach Reich",
+            "wealth_scraping_albion": "Scraping Albion",
+            "wealth_scraping_midgard": "Scraping Midgard",
+            "wealth_scraping_hibernia": "Scraping Hibernia",
+            "wealth_calculate_total": "Gesamtberechnung"
         },
         "stats_update": {
             "title": "📊 Statistiken werden aktualisiert...",
@@ -537,7 +545,65 @@
             "description": "Öffnen des Browsers für Discord-Authentifizierung",
             "success": "✅ {count} Cookies generiert!"
         },
-        "error": "❌ {error}"
+        "error": "❌ {error}",
+        "operation_in_progress": "⏳ Vorgang läuft...",
+        "canceling": "Abbrechen...",
+        "cancellation_in_progress": "⚠️ Abbruch läuft...",
+        "skipped_reason": "Übersprungen: {reason}",
+        "error_reason": "Fehler: {error}",
+        "operation_failed": "Vorgang fehlgeschlagen",
+        "error_message": "❌ Fehler: {error}",
+        "operation_completed": "✅ Vorgang erfolgreich abgeschlossen!"
+    },
+    "herald_search": {
+        "window_title": "🔍 Herald Eden-Suche",
+        "title_label": "🔍 Charaktersuche",
+        "description": "Geben Sie den Charakternamen ein, um im Eden-DAOC Herald zu suchen.\nDie Ergebnisse werden unten angezeigt.",
+        "search_group_title": "Suche",
+        "name_label": "Charaktername:",
+        "name_placeholder": "Mindestens 3 Zeichen (z.B. Alb, Tho, Ely...)",
+        "realm_label": "Reich:",
+        "realm_all": "Alle Reiche",
+        "realm_tooltip": "Wählen Sie ein Reich aus, um die Suche zu verfeinern",
+        "status_ready": "Bereit zu suchen",
+        "results_group_title": "Ergebnisse",
+        "column_check": "☑",
+        "column_realm": "Reich",
+        "column_name": "Name",
+        "column_class": "Klasse",
+        "column_race": "Rasse",
+        "column_guild": "Gilde",
+        "column_level": "Stufe",
+        "column_rp": "RP",
+        "column_realm_rank": "Reich-Rang",
+        "search_button": "🔍 Suchen",
+        "import_selected_button": "📥 Auswahl importieren",
+        "import_selected_tooltip": "Ausgewählte Charaktere importieren",
+        "import_all_button": "📥 Alle importieren",
+        "import_all_tooltip": "Alle gefundenen Charaktere importieren",
+        "close_button": "Schließen",
+        "status_found": "✅ {count} Charakter(e) gefunden, beginnend mit '{query}'",
+        "status_no_results": "⚠️ Keine Charaktere gefunden für '{query}'",
+        "status_read_error": "❌ Lesefehler: {error}",
+        "status_search_error": "❌ Fehler: {message}",
+        "context_menu_import": "📥 Diesen Charakter importieren",
+        "name_required_title": "Name erforderlich",
+        "name_required_message": "Bitte geben Sie einen Charakternamen zum Suchen ein.",
+        "name_too_short_title": "Name zu kurz",
+        "name_too_short_message": "Bitte geben Sie mindestens 3 Zeichen für die Suche ein.",
+        "confirm_import_single_title": "Import bestätigen",
+        "confirm_import_single_message": "Möchten Sie den Charakter '{name}' importieren?",
+        "no_selection_title": "Keine Auswahl",
+        "no_selection_message": "Bitte wählen Sie mindestens einen Charakter zum Importieren aus.",
+        "confirm_import_selected_title": "Import bestätigen",
+        "confirm_import_selected_message": "Möchten Sie {count} ausgewählte(n) Charakter(e) importieren?",
+        "confirm_import_all_title": "Import bestätigen",
+        "confirm_import_all_message": "Möchten Sie alle {count} gefundene(n) Charakter(e) importieren?",
+        "search_title_realm": "🔍 Suche nach '{name}' in {realm}...",
+        "search_description_realm": "Verbindung zu Eden Herald und Suche nach Charakteren im Reich {realm}",
+        "search_title_all": "🔍 Suche nach '{name}' auf Eden Herald...",
+        "search_description_all": "Verbindung zu Eden Herald und Suche nach Charakteren in allen Reichen",
+        "search_complete": "{count} Charakter(e) gefunden"
     },
     "realms": {
         "albion": "Albion",
