--- a/Language/en.json
+++ b/Language/en.json
@@ -239,7 +239,7 @@
             "migration_already_done": "Migration has already been completed",
             "migration_not_needed": "No migration needed",
             "migration_no_characters": "No characters to migrate",
-            "herald_import_complete": "Import Complete",
+            "herald_import_complete_title": "Import Complete",
             "herald_import_success": "✅ {count} character(s) imported successfully!",
             "herald_import_updated": "🔄 {count} character(s) updated!",
             "herald_import_errors": "⚠️ {count} error(s):",
@@ -525,7 +525,15 @@
             "cookie_gen_extract": "Extracting cookies",
             "cookie_gen_save": "Saving cookies",
             "cookie_gen_validate": "Validating and checking",
-            "cleanup": "Closing browser"
+            "cleanup": "Closing browser",
+            "character_update_simple_scraping": "Scraping character page",
+            "character_update_simple_comparison": "Comparing data",
+            "character_update_simple_apply": "Applying changes",
+            "wealth_search_characters": "Searching characters by realm",
+            "wealth_scraping_albion": "Scraping Albion",
+            "wealth_scraping_midgard": "Scraping Midgard",
+            "wealth_scraping_hibernia": "Scraping Hibernia",
+            "wealth_calculate_total": "Calculating total"
         },
         "stats_update": {
             "title": "📊 Updating statistics...",
@@ -537,7 +545,65 @@
             "description": "Opening browser for Discord authentication",
             "success": "✅ {count} cookies generated!"
         },
-        "error": "❌ {error}"
+        "error": "❌ {error}",
+        "operation_in_progress": "⏳ Operation in progress...",
+        "canceling": "Canceling...",
+        "cancellation_in_progress": "⚠️ Cancellation in progress...",
+        "skipped_reason": "Skipped: {reason}",
+        "error_reason": "Error: {error}",
+        "operation_failed": "Operation failed",
+        "error_message": "❌ Error: {error}",
+        "operation_completed": "✅ Operation completed successfully!"
+    },
+    "herald_search": {
+        "window_title": "🔍 Herald Eden Search",
+        "title_label": "🔍 Character Search",
+        "description": "Enter the character name to search on the Eden-DAOC Herald.\nResults will be displayed below.",
+        "search_group_title": "Search",
+        "name_label": "Character name:",
+        "name_placeholder": "Minimum 3 characters (e.g., Alb, Tho, Ely...)",
+        "realm_label": "Realm:",
+        "realm_all": "All realms",
+        "realm_tooltip": "Select a realm to refine the search",
+        "status_ready": "Ready to search",
+        "results_group_title": "Results",
+        "column_check": "☑",
+        "column_realm": "Realm",
+        "column_name": "Name",
+        "column_class": "Class",
+        "column_race": "Race",
+        "column_guild": "Guild",
+        "column_level": "Level",
+        "column_rp": "RP",
+        "column_realm_rank": "Realm Rank",
+        "search_button": "🔍 Search",
+        "import_selected_button": "📥 Import Selection",
+        "import_selected_tooltip": "Import checked characters",
+        "import_all_button": "📥 Import All",
+        "import_all_tooltip": "Import all found characters",
+        "close_button": "Close",
+        "status_found": "✅ {count} character(s) found starting with '{query}'",
+        "status_no_results": "⚠️ No characters found for '{query}'",
+        "status_read_error": "❌ Read error: {error}",
+        "status_search_error": "❌ Error: {message}",
+        "context_menu_import": "📥 Import this character",
+        "name_required_title": "Name Required",
+        "name_required_message": "Please enter a character name to search.",
+        "name_too_short_title": "Name Too Short",
+        "name_too_short_message": "Please enter at least 3 characters for the search.",
+        "confirm_import_single_title": "Confirm Import",
+        "confirm_import_single_message": "Do you want to import the character '{name}'?",
+        "no_selection_title": "No Selection",
+        "no_selection_message": "Please check at least one character to import.",
+        "confirm_import_selected_title": "Confirm Import",
+        "confirm_import_selected_message": "Do you want to import {count} selected character(s)?",
+        "confirm_import_all_title": "Confirm Import",
+        "confirm_import_all_message": "Do you want to import all {count} found character(s)?",
+        "search_title_realm": "🔍 Searching for '{name}' in {realm}...",
+        "search_description_realm": "Connecting to Eden Herald and searching for characters in {realm} realm",
+        "search_title_all": "🔍 Searching for '{name}' on Eden Herald...",
+        "search_description_all": "Connecting to Eden Herald and searching for characters in all realms",
+        "search_complete": "{count} character(s) found"
     },
     "realms": {
         "albion": "Albion",
