--- a/Language/fr.json
+++ b/Language/fr.json
@@ -239,7 +239,7 @@
             "migration_already_done": "La migration a déjà été effectuée",
             "migration_not_needed": "Aucune migration nécessaire",
             "migration_no_characters": "Aucun personnage à migrer",
-            "herald_import_complete": "Import terminé",
+            "herald_import_complete_title": "Import terminé",
             "herald_import_success": "✅ {count} personnage(s) importé(s) avec succès !",
             "herald_import_updated": "🔄 {count} personnage(s) mis à jour !",
             "herald_import_errors": "⚠️ {count} erreur(s):",
@@ -525,7 +525,15 @@
             "cookie_gen_extract": "Extraction des cookies",
             "cookie_gen_save": "Sauvegarde des cookies",
             "cookie_gen_validate": "Validation et vérification",
-            "cleanup": "Fermeture du navigateur"
+            "cleanup": "Fermeture du navigateur",
+            "character_update_simple_scraping": "Scraping de la page personnage",
+            "character_update_simple_comparison": "Comparaison des données",
+            "character_update_simple_apply": "Application des modifications",
+            "wealth_search_characters": "Recherche des personnages par royaume",
+            "wealth_scraping_albion": "Scraping Albion",
+            "wealth_scraping_midgard": "Scraping Midgard",
+            "wealth_scraping_hibernia": "Scraping Hibernia",
+            "wealth_calculate_total": "Calcul du total"
         },
         "stats_update": {
             "title": "📊 Mise à jour des statistiques...",
@@ -535,9 +543,67 @@
         "cookie_generation": {
             "title": "🍪 Génération des cookies...",
             "description": "Ouverture du navigateur pour authentification Discord",
-            "success": "✅ {count} cookies générés !"
+            "success": "✅ {count} cookies générés!"
         },
-        "error": "❌ {error}"
+        "error": "❌ {error}",
+        "operation_in_progress": "⏳ Opération en cours...",
+        "canceling": "Annulation...",
+        "cancellation_in_progress": "⚠️ Annulation en cours...",
+        "skipped_reason": "Sauté: {reason}",
+        "error_reason": "Erreur: {error}",
+        "operation_failed": "Opération échouée",
+        "error_message": "❌ Erreur: {error}",
+        "operation_completed": "✅ Opération terminée avec succès !"
+    },
+    "herald_search": {
+        "window_title": "🔍 Recherche Herald Eden",
+        "title_label": "🔍 Recherche de Personnage",
+        "description": "Entrez le nom du personnage à rechercher sur le Herald Eden-DAOC.\nLes résultats seront affichés ci-dessous.",
+        "search_group_title": "Recherche",
+        "name_label": "Nom du personnage :",
+        "name_placeholder": "Minimum 3 caractères (ex: Alb, Tho, Ely...)",
+        "realm_label": "Royaume :",
+        "realm_all": "Tous les royaumes",
+        "realm_tooltip": "Sélectionnez un royaume pour affiner la recherche",
+        "status_ready": "Prêt à rechercher",
+        "results_group_title": "Résultats",
+        "column_check": "☑",
+        "column_realm": "Royaume",
+        "column_name": "Nom",
+        "column_class": "Classe",
+        "column_race": "Race",
+        "column_guild": "Guilde",
+        "column_level": "Niveau",
+        "column_rp": "RP",
+        "column_realm_rank": "Realm Rank",
+        "search_button": "🔍 Rechercher",
+        "import_selected_button": "📥 Importer sélection",
+        "import_selected_tooltip": "Importer les personnages cochés",
+        "import_all_button": "📥 Importer tout",
+        "import_all_tooltip": "Importer tous les personnages trouvés",
+        "close_button": "Fermer",
+        "status_found": "✅ {count} personnage(s) trouvé(s) commençant par '{query}'",
+        "status_no_results": "⚠️ Aucun personnage trouvé pour '{query}'",
+        "status_read_error": "❌ Erreur de lecture: {error}",
+        "status_search_error": "❌ Erreur : {message}",
+        "context_menu_import": "📥 Importer ce personnage",
+        "name_required_title": "Nom requis",
+        "name_required_message": "Veuillez entrer un nom de personnage à rechercher.",
+        "name_too_short_title": "Nom trop court",
+        "name_too_short_message": "Veuillez entrer au moins 3 caractères pour la recherche.",
+        "confirm_import_single_title": "Confirmer l'import",
+        "confirm_import_single_message": "Voulez-vous importer le personnage '{name}' ?",
+        "no_selection_title": "Aucune sélection",
+        "no_selection_message": "Veuillez cocher au moins un personnage à importer.",
+        "confirm_import_selected_title": "Confirmer l'import",
+        "confirm_import_selected_message": "Voulez-vous importer {count} personnage(s) sélectionné(s) ?",
+        "confirm_import_all_title": "Confirmer l'import",
+        "confirm_import_all_message": "Voulez-vous importer tous les {count} personnage(s) trouvé(s) ?",
+        "search_title_realm": "🔍 Recherche de '{name}' dans {realm}...",
+        "search_description_realm": "Connexion à Eden Herald et recherche de personnages dans le royaume {realm}",
+        "search_title_all": "🔍 Recherche de '{name}' sur Eden Herald...",
+        "search_description_all": "Connexion à Eden Herald et recherche de personnages dans tous les royaumes",
+        "search_complete": "{count} personnage(s) trouvé(s)"
     },
     "realms": {
         "albion": "Albion",
