feat(lang): Translate CharacterSheetWindow to EN/DE
##  Summary
Complete translation of character sheet window UI, supporting FR/EN/DE languages.

##  Features
### Language Files (FR/EN/DE)
- **character_sheet.labels** (27 keys):
  - Eden Herald section: eden_herald, herald_url, herald_url_placeholder
  - Action buttons: open_browser, update_from_herald with tooltips
  - General info: name, realm, class, race, level, season, server, page, guild
  - Realm rank: realm_rank_group, rank, rank_level
  - Armor manager: armor_manager with tooltip
  - Validation messages: no_herald_url, herald_validation_pending
  - Placeholder: no_class_selected

- **character_sheet.messages** (16 keys):
  - Stats update: stats_update_success, stats_update_warning_partial
  - Save errors: stats_save_error, save_error
  - Partial updates: partial_update_title, rvr_success_pvp_failed, pvp_success_rvr_failed
  - Fetch errors: stats_fetch_failed, stats_fetch_error_title, unknown_error
  - Success messages: rank_update_success, info_update_success
  - Armor manager: armor_manager_error, character_id_error

### Code Updates (UI/dialogs.py)
- **CharacterSheetWindow.__init__()**: All hardcoded French texts replaced
  - Eden Herald section (group, labels, buttons, tooltips)
  - General info section (all form labels and placeholders)
  - Realm rank section (group, rank/level labels)
  - Armor manager button and tooltip
  - Herald validation messages

- **Stats update messages**: Translated all feedback dialogs
  - Success message with RvR/PvP/PvE/Wealth breakdown
  - Partial update warnings (RvR only / PvP only)
  - Complete failure error messages
  - Save error handling

- **Character info update**: Translated rank and info save messages
- **Armor manager**: Translated error dialogs

### Documentation
- **LANGUAGE_V2_TECHNICAL_DOC.md**: Updated character_sheet section
  - Complete key listing (73 total: 27 labels + 7 sections + 19 stats + 16 messages)
  - Usage examples for labels, sections, stats,

--- a/Language/de.json
+++ b/Language/de.json
@@ -432,6 +432,35 @@
         "url": "Herald-URL"
     },
     "character_sheet": {
+        "labels": {
+            "eden_herald": "🌐 Eden Herald",
+            "herald_url": "Herald-URL:",
+            "herald_url_placeholder": "https://eden-daoc.net/herald?n=player&k=Charaktername",
+            "open_browser": "🌐 Im Browser öffnen",
+            "open_browser_tooltip": "Herald-Seite im Browser öffnen",
+            "update_from_herald": "🔄 Vom Herald aktualisieren",
+            "update_from_herald_tooltip": "Daten vom Herald abrufen und aktualisieren",
+            "general_info": "Allgemeine Informationen",
+            "name": "Name:",
+            "name_placeholder": "Charaktername (Eingabetaste zum Umbenennen)",
+            "realm": "Reich:",
+            "class": "Klasse:",
+            "race": "Rasse:",
+            "level": "Stufe:",
+            "season": "Saison:",
+            "server": "Server:",
+            "page": "Seite:",
+            "guild": "Gilde:",
+            "guild_placeholder": "Gildenname",
+            "realm_rank_group": "Reich-Rang",
+            "rank": "Rang:",
+            "rank_level": "Stufe:",
+            "armor_manager": "📁 Rüstung verwalten",
+            "armor_manager_tooltip": "Rüstungsdateien hochladen und verwalten, die mit Software von Drittanbietern erstellt wurden",
+            "no_herald_url": "Bitte konfigurieren Sie zuerst die Herald-URL",
+            "herald_validation_pending": "⏳ Herald-Validierung beim Start läuft...",
+            "no_class_selected": "No\nClass\nSelected"
+        },
         "stats": {
             "realm_rank": "Reichsrang:",
             "tower_captures": "🗼 Turm-Eroberungen:",
