--- a/Language/en.json
+++ b/Language/en.json
@@ -432,6 +432,35 @@
         "url": "Herald URL"
     },
     "character_sheet": {
+        "labels": {
+            "eden_herald": "🌐 Eden Herald",
+            "herald_url": "Herald URL:",
+            "herald_url_placeholder": "https://eden-daoc.net/herald?n=player&k=CharacterName",
+            "open_browser": "🌐 Open in browser",
+            "open_browser_tooltip": "Open Herald page in browser",
+            "update_from_herald": "🔄 Update from Herald",
+            "update_from_herald_tooltip": "Fetch and update data from Herald",
+            "general_info": "General Information",
+            "name": "Name:",
+            "name_placeholder": "Character name (Press Enter to rename)",
+            "realm": "Realm:",
+            "class": "Class:",
+            "race": "Race:",
+            "level": "Level:",
+            "season": "Season:",
+            "server": "Server:",
+            "page": "Page:",
+            "guild": "Guild:",
+            "guild_placeholder": "Guild name",
+            "realm_rank_group": "Realm Rank",
+            "rank": "Rank:",
+            "rank_level": "Level:",
+            "armor_manager": "📁 Manage Armor",
+            "armor_manager_tooltip": "Upload and manage armor files created with third-party software",
+            "no_herald_url": "Please configure Herald URL first",
+            "herald_validation_pending": "⏳ Herald validation in progress at startup...",
+            "no_class_selected": "No\nClass\nSelected"
+        },
         "stats": {
             "realm_rank": "Realm Rank:",
             "tower_captures": "🗼 Tower Captures:",
