--- a/Language/fr.json
+++ b/Language/fr.json
@@ -432,6 +432,35 @@
         "selection": "Sélection"
     },
     "character_sheet": {
+        "labels": {
+            "eden_herald": "🌐 Eden Herald",
+            "herald_url": "URL Herald :",
+            "herald_url_placeholder": "https://eden-daoc.net/herald?n=player&k=NomPersonnage",
+            "open_browser": "🌐 Ouvrir dans le navigateur",
+            "open_browser_tooltip": "Ouvrir la page Herald dans le navigateur",
+            "update_from_herald": "🔄 Mettre à jour depuis Herald",
+            "update_from_herald_tooltip": "Récupérer et mettre à jour les données depuis Herald",
+            "general_info": "Informations générales",
+            "name": "Nom :",
+            "name_placeholder": "Nom du personnage (Appuyez sur Entrée pour renommer)",
+            "realm": "Royaume :",
+            "class": "Classe :",
+            "race": "Race :",
+            "level": "Niveau :",
+            "season": "Saison :",
+            "server": "Serveur :",
+            "page": "Page :",
+            "guild": "Guilde :",
+            "guild_placeholder": "Nom de la guilde",
+            "realm_rank_group": "Rang de Royaume",
+            "rank": "Rang :",
+            "rank_level": "Niveau :",
+            "armor_manager": "📁 Gérer les armures",
+            "armor_manager_tooltip": "Upload et gestion des fichiers d'armure créés avec des logiciels tiers",
+            "no_herald_url": "Veuillez d'abord configurer l'URL Herald",
+            "herald_validation_pending": "⏳ Validation Herald en cours au démarrage...",
+            "no_class_selected": "No\nClass\nSelected"
+        },
         "stats": {
             "realm_rank": "Rang de Royaume :",
             "tower_captures": "🗼 Tower Captures:",
