fix(lang): Enable dynamic language switching for version info section
## Problem
Version info section labels didn't update when changing language - required app restart

## Solution
- Converted local QLabel variables to instance attributes in UIManager
- Enhanced retranslate_ui() with dynamic label updates
- Added status_bar.status_group_title for group box title translation

## Changes
### Code (Functions/ui_manager.py)
- Store UI elements as attributes: status_group, info_group, version_*_title_label
- retranslate_ui() now updates: group titles, version labels, buttons

### Translations (FR/EN/DE)
- Added status_bar.status_group_title (3 languages)
- Stats update messages translated (16 message keys)

### Documentation
- Updated LANGUAGE_V2_TECHNICAL_DOC.md status_bar section (23 keys)

## Testing
- Change language in settings
- Version info section updates immediately without restart
- Group titles, labels, and buttons all translate dynamically

--- a/Language/de.json
+++ b/Language/de.json
@@ -408,7 +408,8 @@
     },
     "status_bar": {
         "loaded": "Bereit. Geladen in {duration:.2f} Sekunden.",
-        "selection_count": "{count} von {total} Charakter(e) ausgewählt"
+        "selection_count": "{count} von {total} Charakter(e) ausgewählt",
+        "status_group_title": "Eden Herald Status"
     },
     "themes": {
         "light": "Hell",
@@ -493,7 +494,21 @@
         },
         "messages": {
             "pve_coming_soon": "🔜 PvE-Statistiken demnächst verfügbar",
-            "statistics_coming_soon": "🔜 Funktion kommt bald"
+            "statistics_coming_soon": "🔜 Funktion kommt bald",
+            "stats_update_success": "Statistiken aktualisiert:",
+            "stats_update_warning_partial": "Einige Statistiken konnten nicht abgerufen werden",
+            "stats_save_error": "Statistiken abgerufen, aber Speicherfehler: {msg}",
+            "partial_update_title": "Teilweise Aktualisierung",
+            "rvr_success_pvp_failed": "✅ RvR-Eroberungen erfolgreich abgerufen\n❌ PvP-Statistiken nicht verfügbar\n\nPvP-Fehler: {error}\n\nDies kann passieren, wenn der Charakter noch keine PvP-Statistiken hat.\nTower/Keep/Relic-Eroberungen wurden gespeichert.",
+            "pvp_success_rvr_failed": "❌ RvR-Eroberungen nicht verfügbar\n✅ PvP-Statistiken erfolgreich abgerufen\n\nRvR-Fehler: {error}\n\nPvP-Statistiken wurden gespeichert.",
+            "stats_fetch_failed": "Statistiken konnten nicht abgerufen werden:",
+            "stats_fetch_error_title": "Fehler",
+            "unknown_error": "Unbekannter Fehler",
+            "rank_update_success": "Rang aktualisiert: {level}\nReich-Punkte: {rp:,}",
+            "info_update_success": "Charakterinformationen erfolgreich aktualisiert!",
+            "save_error": "Fehler beim Speichern: {error}",
+            "armor_manager_error": "Fehler beim Öffnen der Rüstungsverwaltung:\n{error}\n\n{traceback}",
+            "character_id_error": "Charakter-ID kann nicht ermittelt werden."
         }
     },
     "context_menu": {
