fix(lang): Translate RvR capture labels to FR/EN/DE
Updated RvR statistics labels in character sheet:
- FR: Tours/Forteresses/Reliques Capturées
- EN: Towers/Keeps/Relics Captured
- DE: Türme/Festungen/Reliquien Erobert

Note: The scraper still searches for 'Tower Captures', 'Keep Captures', 'Relic Captures' in Eden Herald HTML (which is in English), but the UI now displays properly translated labels.

--- a/Language/de.json
+++ b/Language/de.json
@@ -464,9 +464,9 @@
         },
         "stats": {
             "realm_rank": "Reichsrang:",
-            "tower_captures": "🗼 Turm-Eroberungen:",
-            "keep_captures": "🏰 Burg-Eroberungen:",
-            "relic_captures": "💎 Reliquien-Eroberungen:",
+            "tower_captures": "🗼 Türme Erobert:",
+            "keep_captures": "🏰 Festungen Erobert:",
+            "relic_captures": "💎 Reliquien Erobert:",
             "solo_kills": "⚔️ Solo-Kills:",
             "deathblows": "💀 Todesstöße:",
             "kills": "🎯 Kills:",
