fix(lang): Translate PvP and PvE statistics labels to FR/EN/DE
Updated character sheet statistics labels in all languages:

## PvP Statistics (RvR section already done in previous commit)
- FR: Kills en Solo, Coups Fatals, Kills
- EN: Solo Kills, Deathblows, Kills
- DE: Solo-Kills, Todesstöße, Kills

## PvE Statistics
- FR: Dragons Tués, Légions Tuées, Mini Dragons Tués, Rencontres Épiques, Donjons Épiques
- EN: Dragons Killed, Legions Killed, Mini Dragons Killed, Epic Encounters, Epic Dungeons
- DE: Drachen Getötet, Legionen Getötet, Mini-Drachen Getötet, Epische Begegnungen, Epische Dungeons

## Documentation
- Updated LANGUAGE_V2_TECHNICAL_DOC.md with all new translations

Note: The scraper continues to search for English terms in Eden Herald HTML, but the UI now displays properly translated labels in all languages.

--- a/Language/de.json
+++ b/Language/de.json
@@ -470,9 +470,9 @@
             "solo_kills": "⚔️ Solo-Kills:",
             "deathblows": "💀 Todesstöße:",
             "kills": "🎯 Kills:",
-            "dragon_kills": "Drachen-Kills:",
-            "legion_kills": "Legionen-Kills:",
-            "mini_dragon_kills": "Mini-Drachen-Kills:",
+            "dragon_kills": "Drachen Getötet:",
+            "legion_kills": "Legionen Getötet:",
+            "mini_dragon_kills": "Mini-Drachen Getötet:",
             "epic_encounters": "Epische Begegnungen:",
             "epic_dungeons": "Epische Dungeons:",
             "sobekite": "Sobekite:",
