--- a/Language/fr.json
+++ b/Language/fr.json
@@ -467,14 +467,14 @@
             "tower_captures": "🗼 Tours Capturées :",
             "keep_captures": "🏰 Forteresses Capturées :",
             "relic_captures": "💎 Reliques Capturées :",
-            "solo_kills": "⚔️ Solo Kills:",
-            "deathblows": "💀 Deathblows:",
-            "kills": "🎯 Kills:",
-            "dragon_kills": "Dragon Kills:",
-            "legion_kills": "Legion Kills:",
-            "mini_dragon_kills": "Mini Dragon Kills:",
-            "epic_encounters": "Epic Encounters:",
-            "epic_dungeons": "Epic Dungeons:",
+            "solo_kills": "⚔️ Kills en Solo :",
+            "deathblows": "💀 Coups Fatals :",
+            "kills": "🎯 Kills :",
+            "dragon_kills": "Dragons Tués :",
+            "legion_kills": "Légions Tuées :",
+            "mini_dragon_kills": "Mini Dragons Tués :",
+            "epic_encounters": "Rencontres Épiques :",
+            "epic_dungeons": "Donjons Épiques :",
             "sobekite": "Sobekite:",
             "gold": "Or:",
             "silver": "Argent:",
