--- a/Language/en.json
+++ b/Language/en.json
@@ -470,9 +470,9 @@
             "solo_kills": "⚔️ Solo Kills:",
             "deathblows": "💀 Deathblows:",
             "kills": "🎯 Kills:",
-            "dragon_kills": "Dragon Kills:",
-            "legion_kills": "Legion Kills:",
-            "mini_dragon_kills": "Mini Dragon Kills:",
+            "dragon_kills": "Dragons Killed:",
+            "legion_kills": "Legions Killed:",
+            "mini_dragon_kills": "Mini Dragons Killed:",
             "epic_encounters": "Epic Encounters:",
             "epic_dungeons": "Epic Dungeons:",
             "sobekite": "Sobekite:",
