refactor(lang): Remove obsolete qdarkstyle_not_found_tooltip key
The application no longer uses the external qdarkstyle library. It now uses a custom theme system based on JSON files in the Themes/ folder (purple.json, dark.json, default.json).

## Changes
- Removed qdarkstyle_not_found_tooltip from FR/EN/DE language files
- Updated language_schema.py (misc section now has 1 key instead of 5)
- Updated LANGUAGE_V2_TECHNICAL_DOC.md to reflect the change

## Remaining
- misc.none: Still used in the UI to display 'None'/'Aucun'/'Keine'

--- a/Language/de.json
+++ b/Language/de.json
@@ -132,8 +132,7 @@
         }
     },
     "misc": {
-        "none": "Keine",
-        "qdarkstyle_not_found_tooltip": "Modul 'qdarkstyle' nicht gefunden. Führen Sie 'pip install qdarkstyle' aus, um das dunkle Thema zu aktivieren."
+        "none": "Keine"
     },
     "buttons": {
         "create": "Neuer Charakter",
